--- a/html/nav/about.html
+++ b/html/nav/about.html
@@ -4,25 +4,25 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>About Sudan Hub</title>
-        <link rel="stylesheet" href="/css/about.css">
+        <link rel="stylesheet" href="css/about.css">
     </head>
     <body>
         <header class="header">
-            <img src="/images/logo.png" alt="sudan hub logo" width="150px" class="logo">
+            <img src="images/logo.png" alt="sudan hub logo" width="150px" class="logo">
             <nav class="navigation">
                 <ul>
-                    <li><a href="/html/index.html" target="_blank">Home</a></li>
-                    <li><a href="/html/nav/explore.html" target="_blank">Explore</a></li>
+                    <li><a href="html/index.html" target="_blank">Home</a></li>
+                    <li><a href="html/nav/explore.html" target="_blank">Explore</a></li>
                     <li class="dropdown">
-                        <a href="/html/nav/categories.html" target="_blank">Categories</a>
+                        <a href="html/nav/categories.html" target="_blank">Categories</a>
                         <ul class="dropdown-menu">
-                            <li><a href="/html/nav/dropdown/characters.html" target="_blank">Influential Figures</a></li>
-                            <li><a href="/html/nav/dropdown/culture.html" target="_blank">Culture</a></li>
-                            <li><a href="/html/nav/dropdown/history.html" target="_blank">History</a></li>
-                            <li><a href="/html/nav/dropdown/presidents.html" target="_blank">Presidents</a></li>
+                            <li><a href="html/nav/dropdown/characters.html" target="_blank">Influential Figures</a></li>
+                            <li><a href="html/nav/dropdown/culture.html" target="_blank">Culture</a></li>
+                            <li><a href="html/nav/dropdown/history.html" target="_blank">History</a></li>
+                            <li><a href="html/nav/dropdown/presidents.html" target="_blank">Presidents</a></li>
                         </ul>
                     </li>
-                    <li><a href="hmo24x9@gmail.com" target="_blank">Contact me</a></li>
+                    <li><a href="mailto:codemo.devx@gmail.com" target="_blank">Contact me</a></li>
                 </ul>
             </nav>
         </header>
