--- a/index.html
+++ b/index.html
@@ -4,33 +4,33 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Sudan Hub</title>
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     </head>
     <body>
         <header class="header" style="grid-area: head;">
-            <img class="logo" src="/images/logo.png" alt="Sudan Hub Logo" width="150px" height="auto">
+            <img class="logo" src="images/logo.png" alt="Sudan Hub Logo" width="150px" height="auto">
             <nav class="navigation" style="grid-area: nav;">
                 <ul>
-                    <li><a href="/html/nav/for-you.html" target="_blank">For you</a></li>
-                    <li><a href="/html/nav/explore.html" target="_blank">Explore</a></li>
+                    <li><a href="html/nav/for-you.html" target="_blank">For you</a></li>
+                    <li><a href="html/nav/explore.html" target="_blank">Explore</a></li>
                     <li class="dropdown">
-                        <a href="/html/nav/about.html" target="_blank">About</a>
+                        <a href="html/nav/about.html" target="_blank">About</a>
                         <ul class="dropdown-menu">
-                            <li><a href="/html/nav/about.html" target="_blank">About Sudan Hub</a></li>
+                            <li><a href="html/nav/about.html" target="_blank">About Sudan Hub</a></li>
                             <li><a href="#">About me</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
-                         <a href="/html/nav/categories.html" target="_blank">Categories</a>
+                         <a href="html/nav/categories.html" target="_blank">Categories</a>
                          <ul class="dropdown-menu">
-                             <li><a href="/html/nav/dropdown/characters.html" target="_blank">Influential Figures</a></li>
-                             <li><a href="/html/nav/dropdown/culture.html" target="_blank">Culture</a></li>
-                             <li><a href="/html/nav/dropdown/history.html" target="_blank">History</a></li>
-                             <li><a href="/html/nav/dropdown/presidents.html" target="_blank">Presidents</a></li>
+                             <li><a href="html/nav/dropdown/characters.html" target="_blank">Influential Figures</a></li>
+                             <li><a href="html/nav/dropdown/culture.html" target="_blank">Culture</a></li>
+                             <li><a href="html/nav/dropdown/history.html" target="_blank">History</a></li>
+                             <li><a href="html/nav/dropdown/presidents.html" target="_blank">Presidents</a></li>
                          </ul>
                     </li>
-                    <li><a href="mailto:hmo24x9@gmail.com">Contact me</a></li>
+                    <li><a href="mailto:codemo.devx@gmail.com">Contact me</a></li>
                 </ul>
             </nav>
         </header>
@@ -52,7 +52,7 @@
                     <a href="https://www.facebook.com/profile.php?id=61577130180269" target="_blank">
                         <i class="fab fa-facebook fa-2x"></i>
                     </a>
-                    <a href="https://github.com/hmo24x9" target="_blank">
+                    <a href="https://github.com/codemo-x" target="_blank">
                         <i class="fab fa-github fa-2x"></i>
                     </a>
                     <a href="https://t.me/sudanhub" target="_blank">
@@ -65,10 +65,10 @@
             </section>
             <section class="sec-2">
                 <h1 class="title-sec2">Suggestions</h1>
-                <a href="/html/nav/dropdown/characters.html" target="_blank" class="view">View more</a>
+                <a href="html/nav/dropdown/characters.html" target="_blank" class="view">View more</a>
                 <div class="slides">
                     <a href="#" target="_blank" class="slide no1">
-                        <img src="../images/borhan.jpg" alt="Abdel fattah al-burhan" width="200px" height="200px">
+                        <img src="images/borhan.jpg" alt="Abdel fattah al-burhan" width="200px" height="200px">
                         <h2>Abdel Fattah al-Burhan</h2>
                         <p>A Sudanese military leader
                         at the heart of the political
@@ -78,7 +78,7 @@
                         </p>
                     </a>
                     <a href="#" target="_blank" class="slide no2">
-                        <img src="../images/kamel.jpg" alt="Kamil Idris" width="200px" height="200px">
+                        <img src="images/kamel.jpg" alt="Kamil Idris" width="200px" height="200px">
                         <h2>Kamil Idris</h2>
                         <p>An international legal
                         scholar and academic,
@@ -88,7 +88,7 @@
                         </p>
                     </a>
                     <a href="#" target="_blank" class="slide no3">
-                        <img src="../images/solja.jpg" alt="soulja" width="200px" height="200px">
+                        <img src="images/solja.jpg" alt="soulja" width="200px" height="200px">
                         <h2>Soulja</h2>
                         <p>The voice of Sudan’s
                         streets...through rap,
@@ -97,7 +97,7 @@
                         </p>
                     </a>
                     <a href="#" target="_blank" class="slide no4">
-                        <img src="../images/borhan.jpg" alt="Abdel fattah al-burhan" width="200px" height="200px">
+                        <img src="images/borhan.jpg" alt="Abdel fattah al-burhan" width="200px" height="200px">
                         <h2>Abdel Fattah al-Burhan</h2>
                         <p>A Sudanese military leader
                         at the heart of the political
@@ -107,7 +107,7 @@
                         </p>
                     </a>
                     <a href="#" target="_blank" class="slide no5">
-                        <img src="../images/kamel.jpg" alt="Kamil Idris" width="200px" height="200px">
+                        <img src="images/kamel.jpg" alt="Kamil Idris" width="200px" height="200px">
                         <h2>Kamil Idris</h2>
                         <p>An international legal
                         scholar and academic,
@@ -117,7 +117,7 @@
                         </p>
                     </a>
                     <a href="#" target="_blank" class="slide no6">
-                        <img src="../images/solja.jpg" alt="soulja" width="200px" height="200px">
+                        <img src="images/solja.jpg" alt="soulja" width="200px" height="200px">
                         <h2>Soulja</h2>
                         <p>The voice of Sudan’s
                         streets...through rap,
@@ -126,7 +126,7 @@
                         </p>
                     </a>
                     <a href="#" target="_blank" class="slide no7">
-                        <img src="../images/borhan.jpg" alt="Abdel fattah al-burhan" width="200px" height="200px">
+                        <img src="images/borhan.jpg" alt="Abdel fattah al-burhan" width="200px" height="200px">
                         <h2>Abdel Fattah al-Burhan</h2>
                         <p>A Sudanese military leader
                         at the heart of the political
@@ -136,7 +136,7 @@
                         </p>
                     </a>
                     <a href="#" target="_blank" class="slide no8">
-                        <img src="../images/kamel.jpg" alt="Kamil Idris" width="200px" height="200px">
+                        <img src="images/kamel.jpg" alt="Kamil Idris" width="200px" height="200px">
                         <h2>Kamil Idris</h2>
                         <p>An international legal
                         scholar and academic,
@@ -146,7 +146,7 @@
                         </p>
                     </a>
                     <a href="#" target="_blank" class="slide no9">
-                        <img src="../images/solja.jpg" alt="soulja" width="200px" height="200px">
+                        <img src="images/solja.jpg" alt="soulja" width="200px" height="200px">
                         <h2>Soulja</h2>
                         <p>The voice of Sudan’s
                         streets...through rap,
